# docsplit

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_NOTES.md  PHASE2_COMPLETE.md  README.md  TODO.md  config.example.yaml  pyproject.toml
src/docsplit/: __init__.py  archive.py  cli.py  config.py  database.py  metadata.py  models.py  ocr.py  pdf_utils.py  preprocessing.py  scanner.py  separator.py  watcher.py  web.py
tests/: test_archive.py  test_archive_rules.py  test_database.py  test_metadata.py  test_models.py  test_scanner.py
